<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/movie_details_background">

    <ImageView
        android:id="@+id/background_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_back_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

    <TextView
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginStart="21dp"
        android:includeFontPadding="false"
        style="@style/BackMovieDetails"
        android:alpha="0.5"
        android:text="@string/back"
        android:textAllCaps="false"
        android:gravity="center"
        app:drawableStartCompat ="@drawable/ic_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_back_horizontal"
        app:layout_constraintBottom_toBottomOf="@id/guideline_back_horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_RARS_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.309" />

    <TextView
        android:id="@+id/text_view_RARS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        style="@style/RARSMovieDetails"
        android:maxLines="2"
        android:includeFontPadding="false"
        android:text="@string/RARS"
        android:gravity="center"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_RARS_horizontal"
        app:layout_constraintBottom_toBottomOf="@id/guideline_RARS_horizontal"/>

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/transparent"
        style="@style/TitleMovieDetails"
        android:includeFontPadding="false"
        android:text="@string/title"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_RARS"/>

    <TextView
        android:id="@+id/text_view_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        style="@style/TagMovieDetails"
        android:includeFontPadding="false"
        android:text="@string/tag"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title"/>

    <ImageView
        android:id="@+id/guideline_rating_horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_tag" />

    <ImageView
        android:id="@+id/star_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_rating_horizontal"
        app:layout_constraintBottom_toBottomOf="@id/guideline_rating_horizontal"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/star_icon"/>

    <ImageView
        android:id="@+id/star_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        app:layout_constraintStart_toEndOf="@id/star_01"
        app:layout_constraintTop_toTopOf="@+id/guideline_rating_horizontal"
        app:layout_constraintBottom_toBottomOf="@id/guideline_rating_horizontal"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/star_icon"/>

    <ImageView
        android:id="@+id/star_03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        app:layout_constraintStart_toEndOf="@id/star_02"
        app:layout_constraintTop_toTopOf="@+id/guideline_rating_horizontal"
        app:layout_constraintBottom_toBottomOf="@id/guideline_rating_horizontal"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/star_icon"/>

    <ImageView
        android:id="@+id/star_04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        app:layout_constraintStart_toEndOf="@id/star_03"
        app:layout_constraintTop_toTopOf="@+id/guideline_rating_horizontal"
        app:layout_constraintBottom_toBottomOf="@id/guideline_rating_horizontal"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/star_icon"/>

    <ImageView
        android:id="@+id/star_05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        app:layout_constraintStart_toEndOf="@id/star_04"
        app:layout_constraintTop_toTopOf="@+id/guideline_rating_horizontal"
        app:layout_constraintBottom_toBottomOf="@id/guideline_rating_horizontal"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/star_icon_empty"/>

    <TextView
        android:id="@+id/text_view_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        style="@style/RatingMovieDetails"
        android:includeFontPadding="false"
        android:text="@string/rating"
        android:textAllCaps="true"
        android:gravity="start"
        app:layout_constraintStart_toEndOf="@id/star_05"
        app:layout_constraintTop_toTopOf="@+id/guideline_rating_horizontal"
        app:layout_constraintBottom_toBottomOf="@id/guideline_rating_horizontal"/>

    <TextView
        android:id="@+id/text_view_story_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        style="@style/StoryLineMovieDetails"
        android:includeFontPadding="false"
        android:text="@string/story_line"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_rating_horizontal" />

    <TextView
        android:id="@+id/text_view_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        style="@style/DescriptionMovieDetails"
        android:includeFontPadding="false"
        android:text="@string/description"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_story_line"/>

    <TextView
        android:id="@+id/text_view_cast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        style="@style/DescriptionMovieDetails"
        android:includeFontPadding="false"
        android:text="@string/cast"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_description" />

    <ImageView
        android:id="@+id/photo_01"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@android:color/transparent"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/photo_01"
        app:layout_constraintEnd_toStartOf="@+id/photo_02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_cast" />

    <ImageView
        android:id="@+id/photo_02"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@android:color/transparent"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/photo_02"
        app:layout_constraintEnd_toStartOf="@id/photo_03"
        app:layout_constraintStart_toEndOf="@id/photo_01"
        app:layout_constraintTop_toBottomOf="@+id/text_view_cast" />

    <ImageView
        android:id="@+id/photo_03"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@android:color/transparent"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/photo_03"
        app:layout_constraintEnd_toStartOf="@id/photo_04"
        app:layout_constraintStart_toEndOf="@id/photo_02"
        app:layout_constraintTop_toBottomOf="@+id/text_view_cast" />

    <ImageView
        android:id="@+id/photo_04"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/photo_04"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/photo_03"
        app:layout_constraintTop_toBottomOf="@+id/text_view_cast" />

    <TextView
        android:id="@+id/text_view_name_01"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        style="@style/DescriptionMovieDetails"
        android:minLines="2"
        android:includeFontPadding="false"
        android:text="@string/name_01"
        app:layout_constraintStart_toStartOf="@id/photo_01"
        app:layout_constraintEnd_toEndOf="@id/photo_01"
        app:layout_constraintTop_toBottomOf="@+id/photo_01" />

    <TextView
        android:id="@+id/text_view_name_02"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        style="@style/DescriptionMovieDetails"
        android:minLines="2"
        android:includeFontPadding="false"
        android:text="@string/name_02"
        app:layout_constraintStart_toStartOf="@id/photo_02"
        app:layout_constraintEnd_toEndOf="@id/photo_02"
        app:layout_constraintTop_toBottomOf="@+id/photo_02" />

    <TextView
        android:id="@+id/text_view_name_03"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        style="@style/DescriptionMovieDetails"
        android:minLines="2"
        android:includeFontPadding="false"
        android:text="@string/name_03"
        app:layout_constraintStart_toStartOf="@id/photo_03"
        app:layout_constraintEnd_toEndOf="@id/photo_03"
        app:layout_constraintTop_toBottomOf="@+id/photo_03" />

    <TextView
        android:id="@+id/text_view_name_04"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        style="@style/DescriptionMovieDetails"
        android:minLines="2"
        android:includeFontPadding="false"
        android:text="@string/name_04"
        app:layout_constraintStart_toStartOf="@id/photo_04"
        app:layout_constraintEnd_toEndOf="@id/photo_04"
        app:layout_constraintTop_toBottomOf="@+id/photo_04" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>